# sailguarding

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  setup.sh
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/cli/: __init__.py  __main__.py  config.py  plugin.py
docs/decisions/: 0001-python-engine-stack.md
docs/tasks/: 01-scaffold-and-event-schema.md  02-storage-strategy-branch-sink.md  03-claude-code-sensor.md  04-selector-classification-engine.md  05-scoring-function-contract.md  06-safeguards-and-bindings.md  07-action-tree-and-budgets.md  08-evidence-ingestion-and-measurement.md  09-attestation-and-the-freshness-contract.md  09-feature-vector-assembly.md  10-behaviour-bands-and-hysteresis.md  10-evidence-ingestion-api.md  11-capability-tools-and-requested-safeguards.md  12-dashboard-requested-attested-holding-expired.md  13-activity-models.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  lookups.ts  main.tsx  styles.css  types.ts
frontend/src/components/: ActivityModal.tsx  ImportModal.tsx  Libraries.tsx  Modal.tsx  ModelBar.tsx  RiskModal.tsx  SafeguardModal.tsx  TreeCanvas.tsx
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json
scripts/: demo-config.sh  plugin.sh
src/sailguarding/: __init__.py
src/sailguarding/classification/: __init__.py  engine.py  matcher.py  selector.py  strategy.py  triage.py
src/sailguarding/domain/: __init__.py  action.py  activity.py  context.py  event.py  serialization.py
src/sailguarding/measurement/: __init__.py  evidence.py  signal.py  sink.py
src/sailguarding/model/: __init__.py  model.py  risk.py  scope.py  store.py  workspace.py
src/sailguarding/safeguards/: __init__.py  binding.py  registry.py  safeguard.py
src/sailguarding/scoring/: __init__.py  decision.py  examples.py  features.py  function.py  scorer.py
src/sailguarding/sensor/: __init__.py  __main__.py  cli.py  config.py  context.py  mock.py  payload.py  pluginconfig.py  recorder.py  redaction.py  spool.py  workunit.py
src/sailguarding/storage/: __init__.py  base.py  branch.py  filesystem.py  git.py  memory.py
src/sailguarding/tree/: __init__.py  budget.py  seed.py  tree.py
src/sailguarding/web/: __init__.py  __main__.py  app.py  page.py  scenario.py  server.py
tests/classification/: conftest.py  test_engine.py  test_matcher.py  test_selector.py
tests/cli/: test_config.py  test_plugin.py  test_sensor_commands.py
tests/domain/: conftest.py  test_action.py  test_activity.py  test_context.py  test_event.py  test_serialization.py
tests/measurement/: conftest.py  test_evidence.py  test_signal.py  test_sink.py
tests/model/: test_model.py  test_risk.py  test_scope.py  test_store.py  test_workspace.py
tests/plugin/: test_plugin_assets.py
tests/safeguards/: test_binding.py  test_registry.py  test_safeguard.py
tests/scoring/: conftest.py  test_decision.py  test_examples.py  test_features.py  test_function.py  test_scorer.py
tests/sensor/: conftest.py  test_cli.py  test_config.py  test_context.py  test_flush.py  test_hook_end_to_end.py  test_payload.py  test_pluginconfig.py  test_recorder.py  test_redaction.py  test_spool.py  test_store_selection.py
tests/storage/: conftest.py  test_branch.py  test_filesystem.py  test_git.py  test_memory.py
tests/tree/: test_budget.py  test_seed.py  test_tree.py
tests/web/: test_app.py  test_scenario.py  test_server.py
