[project]
name = "sailguarding"
version = "0.0.1"
description = "Model, safeguard, measure, and recommend how much work to delegate to agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Homepage = "https://github.com/dipasqualew/sailguarding"

[project.scripts]
# The engine entrypoint the Claude Code plugin hook shells into (`sailguarding record`).
sailguarding = "sailguarding.sensor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sailguarding"]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# page.py is a self-contained HTML/CSS/JS template string: long style rules and typographic
# characters (en dashes, arrows) are intentional and not Python to be reflowed.
"src/sailguarding/web/page.py" = ["E501", "RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
