[project]
name = "sailguarding"
version = "0.0.1"
description = "Model, safeguard, measure, and recommend how much work to delegate to agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Homepage = "https://github.com/dipasqualew/sailguarding"

# No console script: `sg` is the only command on PATH. The operator CLI (which depends on this
# package) carries the sensor's `record`/`flush` hook entrypoints as `sg record` / `sg flush`. The
# engine stays importable as a module — `python -m sailguarding.sensor` — for tests and overrides.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sailguarding"]
# The built React SPA (frontend/ → web/static) is git-ignored, so force it into the wheel; `sg serve`
# serves it off disk. Build the front-end (`./setup.sh` / `npm run build`) before packaging.
artifacts = ["src/sailguarding/web/static/**"]

[tool.uv.workspace]
# `cli` (the `sg` operator CLI) is a sibling package. It may depend on Click; keeping it a
# separate workspace member is what lets the `sailguarding` engine stay zero-runtime-dependency.
members = ["cli"]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
]

[tool.ruff]
src = ["src", "tests", "cli/src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "cli/src"]
mypy_path = ["src", "cli/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
