[project]
name = "cli"
version = "0.0.1"
description = "sg — the sailguarding operator CLI: install/manage the Claude Code sensor plugin."
requires-python = ">=3.11"
# This package is deliberately OUTSIDE the engine's zero-dependency invariant: the `sailguarding`
# package stays stdlib-only (dependencies = []), while this thin operator CLI is free to use Click.
dependencies = ["click>=8.1"]

[project.scripts]
# Installed on PATH as `sg` (via `uv tool install --editable ./cli`).
sg = "cli.__main__:sg"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
